fixed-Misaligned-text-on-About-page

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -696,10 +696,13 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   text-align: center;
   margin: 20px auto;
+   padding-top: 50px;
+   padding-bottom: 30px; /* Added padding from the bottom */
+
 }
 
 .a_heading h1 {
-  font-size: 60px;
+  font-size: 3rem; /* Adjusted for responsiveness */
   color: #000;
   margin-bottom: 25px;
   position: relative;
@@ -717,9 +720,10 @@ body::-webkit-scrollbar-thumb {
 }
 
 .a_container {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
-  padding: 10px 20px;
+  margin-top: 1rem;
+  padding: 30px 20px;
 }
 
 .about {
@@ -736,7 +740,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .a_image img {
-  max-width: 95%;
+  max-width: 100%; /* Adjusted for better fit */
   height: auto;
   display: block;
   transition: 0.5s ease;
@@ -751,16 +755,17 @@ body::-webkit-scrollbar-thumb {
 }
 
 .a_content h2 {
-  font-size: 30px;
-  margin-bottom: 15px;
-  color: #191818;
+  font-size: 2rem; /* Adjusted for responsiveness */
+  margin-bottom: 20px;
+  color: #FD2F78;
   font-weight: bold;
 }
 
 .a_content p {
-  font-size: 22px;
+    font-size: 1.2rem; /* Adjusted for responsiveness */
   line-height: 1.5;
   color: rgb(45, 44, 44);
+  text-align: left;
 }
 
 [data-theme="dark"] .About-Section {
@@ -772,11 +777,24 @@ body::-webkit-scrollbar-thumb {
 }
 
 [data-theme="dark"] .a_content h2 {
-  color: white;
+  color: #FD2F78;
 }
 
 [data-theme="dark"] .a_content p {
   color: white;
+}
+
+/* Media Queries for Responsiveness */
+@media screen and (max-width: 1200px) {
+  .a_heading h1 {
+    font-size: 2.5rem; 
+  }
+  .a_content h2 {
+    font-size: 1.75rem; 
+  }
+  .a_content p {
+    font-size: 0.9rem; 
+  }
 }
 
 @media screen and (max-width: 990px) {
@@ -785,7 +803,7 @@ body::-webkit-scrollbar-thumb {
   }
 
   .a_heading h1 {
-    font-size: 60px;
+    font-size: 2rem; 
     margin-bottom: 0px;
   }
 
@@ -804,12 +822,19 @@ body::-webkit-scrollbar-thumb {
     align-items: center;
   }
 
+  .a_image img {
+    max-width: 100%; 
+  }
+
+  .a_content h2 {
+    font-size: 1.5rem;
+  }
+
   .a_content p {
     padding: 0px;
-    font-size: 25px;
+    font-size: 0.9rem; 
   }
 }
-
 
 
 
